--- a/Ejercicio 2/2 Columna.css
+++ b/Ejercicio 2/2 Columna.css
@@ -11,6 +11,11 @@ html,body{
 	width: 50%;
 	background-color: coral
 }
+.flex{
+		display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
 .container{
 	display: flex;
 	flex-direction: row;
