--- a/Ejercicio 3/3 Columna.css
+++ b/Ejercicio 3/3 Columna.css
@@ -9,6 +9,11 @@ header,footer{
 	height: 100px;
 
 }
+.flex{
+		display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
 .container{
 	display: flex;
 	flex-direction: row;
